@@ -18,6 +18,7 @@ Version 1.6-0, December 19, 2011
       takes the value from the mc.cores glogal option 
       getOption("mc.cores"). If mc.cores is not set (NULL)
       of 1, an error is produced.
+    * mclapplySB added to mimic size balancing with forking.
 
 Version 1.5-1, October 18, 2011
     * "[.mcmc.list.dc" addted to extract parts of a fitted object
